--- a/testify/testify.csproj
+++ b/testify/testify.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="QuestPDF" Version="2022.12.2" />
+  </ItemGroup>
+
 </Project>
